@@ -12,22 +12,21 @@ logger = logging.getLogger(__name__)
 
 
 class ExecUtils(object):
-    """Wrapper for subprocess execution.
-    """
+    """Wrapper for subprocess execution."""
 
     def __init__(self):
-        """Wrapper for subprocess execution
-        """
+        """Wrapper for subprocess execution"""
 
-    def run(self, execPath, execArgList=None, outPath=None, outAppend=False, timeOut=None):
+    def run(self, execPath, execArgList=None, outPath=None, outAppend=False, timeOut=None, inpPath=None):
         """Execute the input program as a blocking subprocess with optional timeout.
 
         Args:
-            execPath ([type]): path to executable program or script
-            execArgList ([type], optional): argument list. Defaults to None.
-            outPath ([type], optional): redirect stdout and stderr to this file handle. Defaults to None.
+            execPath (str): path to executable program or script
+            execArgList (list, optional): argument list. Defaults to None.
+            outPath (str, optional): redirect stdout and stderr to this file handle. Defaults to None.
+            inpPath (str, optional): redirect stdin to this file handle. Defaults to None.
             outAppend (bool, optional): append output. Defaults to False.
-            timeOut ([type], optional): timeout (seconds). Defaults to None.
+            timeOut (float, optional): timeout (seconds). Defaults to None.
 
 
         Returns:
@@ -43,7 +42,11 @@ class ExecUtils(object):
             cmdL = [execPath]
             if execArgList:
                 cmdL.extend(execArgList)
-            if outPath:
+            if outPath and inpPath:
+                myMode = "a" if outAppend else "w"
+                with open(outPath, myMode) as ofh, open(inpPath, "r") as ifh:
+                    subProcResult = subprocess.call(cmdL, stdout=ofh, stdin=ifh, stderr=subprocess.STDOUT, **kwD)
+            elif outPath:
                 myMode = "a" if outAppend else "w"
                 with open(outPath, myMode) as ofh:
                     subProcResult = subprocess.call(cmdL, stdout=ofh, stderr=subprocess.STDOUT, **kwD)
